# SmoothScrollForEveryone

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
public/locales/en/: translation.json
public/locales/ru/: translation.json
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  smooth_scroll.rs
src/components/: CompactParam.tsx  Header.tsx  NumberInput.tsx  ParameterCard.tsx  SettingsDialog.tsx  SettingsPanel.tsx  ToggleCard.tsx  UpdateBanner.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  slider.tsx  switch.tsx  tooltip.tsx
src/lib/: types.ts
src/locales/en/: translation.json
src/locales/ru/: translation.json
