[package]
name = "app"
version = "1.0.0"
description = "Smooth Scroll For Everyone"
authors = ["Denis Solicen"]
license = "MIT"
repository = "https://github.com/SolicenTEAM/Smooth-Scroll-For-Everyone"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
winreg = "0.52"
dirs = "6.0"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader",     "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp", "Win32_Media", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
